tests/regression/error/hw5_error15.correct
too few arguments in call
